[gd_scene load_steps=5 format=3 uid="uid://dd1kmp6t6bdyl"]

[ext_resource type="Script" uid="uid://xmg8oybp5q05" path="res://node_3d.gd" id="1_a202f"]
[ext_resource type="Script" uid="uid://6tb734uc6qn2" path="res://camera_3d.gd" id="2_noarx"]

[sub_resource type="Theme" id="Theme_a0tk4"]
default_font_size = 18

[sub_resource type="Theme" id="Theme_noarx"]
default_font_size = 18

[node name="Node3D" type="Node3D"]
script = ExtResource("1_a202f")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(5000, 0, 0, 0, 5000, 0, 0, 0, 5000, 0, 500, 1000)
current = true
script = ExtResource("2_noarx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 5.0
offset_right = 255.0
offset_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 255.0
offset_bottom = 40.0
theme = SubResource("Theme_a0tk4")

[node name="MenuBar" type="MenuBar" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="File" type="PopupMenu" parent="CanvasLayer/Panel/HBoxContainer/MenuBar"]

[node name="FileDialog" type="FileDialog" parent="CanvasLayer/Panel/HBoxContainer/MenuBar/File"]
title = "Open a File"
size = Vector2i(800, 450)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.kcl")

[node name="FileDialog2" type="FileDialog" parent="CanvasLayer/Panel/HBoxContainer/MenuBar/File"]
title = "Open a File"
size = Vector2i(800, 450)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.pmp")

[node name="FileDialog3" type="FileDialog" parent="CanvasLayer/Panel/HBoxContainer/MenuBar/File"]
access = 2
filters = PackedStringArray("*.pmp")

[node name="Edit" type="PopupMenu" parent="CanvasLayer/Panel/HBoxContainer/MenuBar"]

[node name="Help" type="PopupMenu" parent="CanvasLayer/Panel/HBoxContainer/MenuBar"]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 37.0
offset_right = 255.0
grow_vertical = 2
theme = SubResource("Theme_noarx")

[node name="Object_Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Group:"

[node name="TabBar" type="OptionButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0

[node name="CurrentObj" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Edit Object:"

[node name="SnapY" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Snap to Course"

[node name="CurObjData" type="Tree" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Item List:"

[node name="Add" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Add Object"

[node name="Delete" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Delete Object"

[node name="ObjList" type="Tree" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 0, 0)

[node name="MeshHolder" type="Node3D" parent="."]

[node name="PMP_Objects_Holder" type="Node3D" parent="."]

[connection signal="id_pressed" from="CanvasLayer/Panel/HBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="file_selected" from="CanvasLayer/Panel/HBoxContainer/MenuBar/File/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/Panel/HBoxContainer/MenuBar/File/FileDialog2" to="." method="_on_file_dialog_2_file_selected"]
[connection signal="file_selected" from="CanvasLayer/Panel/HBoxContainer/MenuBar/File/FileDialog3" to="." method="_on_file_dialog_3_file_selected"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer/TabBar" to="." method="_on_tab_bar_item_selected"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SnapY" to="." method="_on_button_pressed"]
[connection signal="item_edited" from="CanvasLayer/VBoxContainer/CurObjData" to="." method="_on_cur_obj_data_item_edited"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer/ObjList" to="." method="_on_obj_list_item_selected"]
